@@ -9,16 +9,19 @@ enum TokenType {
   BANG, BANG_EQUAL,
   EQUAL, EQUAL_EQUAL,
   GREATER, GREATER_EQUAL,
-  LESS, LESS_EQUAL,
+  LESSER, LESSER_EQUAL,
   PLUS_EQUAL, MINUS_EQUAL, 
   STAR_EQUAL, SLASH_EQUAL, 
   MOD, MOD_EQUAL,
+  EXP, EXP_EQUAL,
   QUESTION, COLON, 
   
   // bitwise operators
   BIT_AND, BIT_AND_EQUAL, BIT_NOT,
   BIT_OR, BIT_OR_EQUAL, 
   BIT_XOR, BIT_XOR_EQUAL,
+  BIT_LEFT, BIT_LEFT_EQUAL,
+  BIT_RIGHT, BIT_RIGHT_EQUAL,
 
   // Literals.                                     
   IDENTIFIER, STRING, NUMBER,
